--- a/WoodenSoft.ObamaInHydePark/Site.Master
+++ b/WoodenSoft.ObamaInHydePark/Site.Master
@@ -4,12 +4,12 @@
   <head id="Head1" runat="server">
     <meta charset="utf-8"/>
     <title>Obama In Hyde Park</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="apple-mobile-web-app-capable" content="yes" /> 
     <link href="/css/jquery-ui-1.8.18.custom.css" rel="Stylesheet" />
     <link href="/css/jquery.fancybox-1.3.4.css" rel="stylesheet"/>
-    <link href="/css/bootstrap.css" rel="Stylesheet" />
+    
+    <link href="/css/bootstrap.min.css" rel="Stylesheet" />
     <style type="text/css">
       body {
         padding-top: 60px;
@@ -20,8 +20,10 @@
       }
     </style>
         
-    <link href="/css/bootstrap-responsive.css" rel="Stylesheet" />
-
+    <!--<link href="/css/bootstrap-responsive.css" rel="Stylesheet" />-->
+    <link rel="stylesheet" href="/css/font-awesome.css"/>
+    <link href="/css/focus.css" rel="stylesheet" /> 
+    <link href="/css/focus-responsive.css" rel="stylesheet" />
     <!-- The HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -37,38 +39,16 @@
     <script type="text/javascript" src="/js/jquery-1.7.2.min.js" ></script>
     <script type="text/javascript" src="/js/jquery-ui-1.8.18.custom.min.js" ></script>
     <script type="text/javascript" src="/js/bootstrap.js" ></script>
+    <script type="text/javascript" src="/js/focus.js"></script>
     <script type="text/javascript" src="/js/jquery.fancybox-1.3.4.pack.js"></script>
     <script type="text/javascript" src="/js/jquery.mousewheel-3.0.4.pack.js"></script>
-    
+    <script type="text/javascript" src="/js/slides.min.jquery.js"></script>
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
   </head>
 
   <body>
-  <div id="fb-root"></div>
-<script type="text/javascript">
-//    window.fbAsyncInit = function () {
-//        FB.init({
-//            appId: '335421659872879', // App ID
-//            channelUrl: 'http://obamainhydepark.com/channel.html', // Channel File
-//            status: true, // check login status
-//            cookie: true, // enable cookies to allow the server to access the session
-//            xfbml: true  // parse XFBML
-//        });
-
-//        // Additional initialization code here
-//    };
-
-//    // Load the SDK Asynchronously
-//    (function (d) {
-//        var js, id = 'facebook-jssdk'; if (d.getElementById(id)) { return; }
-//        js = d.createElement('script'); js.id = id; js.async = true;
-//        js.src = "//connect.facebook.net/en_US/all.js";
-//        d.getElementsByTagName('head')[0].appendChild(js);
-//    } (document));
-    
-
-</script>
+	
  <script type="text/javascript">
      $(document).ready(function () {
          $('.liglow').removeClass("active");
@@ -93,59 +73,57 @@
              $('#side_1').addClass("active");
              $('#top_1').addClass("active");
          }
-         $('.liglow').click(function () {
-             $('.liglow').removeClass("active");
-             $('.liglow2').removeClass("active");
-             $(this).addClass("active");
-             var id = $(this).attr('id').substring($(this).attr('id').length - 1, $(this).attr('id').length);
-             $('#top_' + id).addClass('active');
-         });
+//         $('.liglow').click(function () {
+//             $('.liglow').removeClass("active");
+//             $('.liglow2').removeClass("active");
+//             $(this).addClass("active");
+//             var id = $(this).attr('id').substring($(this).attr('id').length - 1, $(this).attr('id').length);
+//             $('#top_' + id).addClass('active');
+//         });
          $('.liglow2').click(function () {
              $('.liglow').removeClass("active");
              $('.liglow2').removeClass("active");
              $(this).addClass("active");
              var id = $(this).attr('id').substring($(this).attr('id').length - 1, $(this).attr('id').length);
-             $('#side_' + id).addClass('active');
+             //$('#side_' + id).addClass('active');
          });
      });
     </script>
     <form id="form1" runat="server"> 
-    <div class="navbar navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container-fluid">
-          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
-          <a class="brand" href="#">Obama In Hyde Park</a>
-         <%-- <div class="btn-group pull-right">
-            <div class="btn dropdown-toggle" data-toggle="dropdown" href="#">
-              <i class="icon-user" ></i> <asp:Label ID="lblUsername" runat="server" />
-              <span class="caret"></span>
-            </div>
-            <ul class="dropdown-menu" style="padding-left: 200">
-              <li><a style="color: #EEEE00; font-weight: bold" href="/User/MyAccount.aspx">My Account</a></li>
-              <li class="divider"></li>
-              <li><asp:LinkButton ID="btnSignOut" runat="server" Text="Sign Out" OnClick="SignOut" /></li>
-            </ul>
-          </div>--%>
-          <div class="nav-collapse">
-            <ul class="nav">
-              <li id="top_1" class="active liglow2"><a href="/Default.aspx">Home</a></li>
+    <div id="wrapper" class="clearfix">
+    <div id="header">
+		
+		<div class="container">
+			
+			<h1 id="title">
+				<a href="/Default.aspx">
+					Obama In Hyde Park
+				</a>
+			</h1>
+	    		
+		</div> <!-- /container -->
+		<asp:Image ID="companyLogo" runat="server" />
+	</div> <!-- /header -->
+      
+    <div id="nav" class="clearfix">
+		
+		<div class="container">
+		
+			<ul id="main-nav">
+				<li id="top_1" class="active liglow2"><a href="/Default.aspx">Home</a></li>
               <li id="top_2" class="liglow2"><a href="/Download.aspx">Download Audio/Visual Tour</a></li>
               <li id="top_3" class="liglow2"><a href="/Map.aspx">See Tour Map</a></li>
               <li id="top_4" class="liglow2"><a href="/About.aspx">About</a></li>
               <li id="top_5" class="liglow2"><a href="/Contact.aspx">Contact</a></li>
-            </ul>
-          </div><!--/.nav-collapse -->
-        </div>
+	        </ul>
+    	</div>
       </div>
-    </div>
-   
+    
+    
+ <%--               
     <div class="container-fluid">
-      <div class="row-fluid">
-        <div class="span3">
+      <div class="row-fluid">--%>
+        <%--<div class="span3">
           <div class="well sidebar-nav">
             <ul class="nav nav-list">
               <li class="nav-header">General Menu</li>
@@ -157,30 +135,30 @@
              
             </ul>
           </div><!--/.well -->
-        </div><!--/span-->
-        <div class="span9">
+        </div><!--/span-->--%>
+      
           
             
     
-    <div><asp:Image ID="companyLogo" runat="server" /></div>
-   
-    <div>
+  
+    
+    <div id="content" class="span8">
         <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
         
         </asp:ContentPlaceHolder>
     </div>
    
-          </div>
-          
-      </div><!--/row-->
+   
 
       <hr/>
-
+        
+        <div class="clearfix"></div>
+      <div style="text-align: left">
       <footer>
       
-        <div>
+        <p>
         By using this site, you agree to the <a href="/TermsAndConditions.aspx">Terms and Conditions</a> of using this site.
-        </div>
+        </p>
         <p>&copy; Obama In Hyde Park <%= DateTime.Now.Year %></p>
         <p>
             &copy; Wooden Software Development Inc <%= DateTime.Now.Year %> 
@@ -188,11 +166,13 @@
         <p>
             Contact: Alexander Wood CEO of Wooden Software Development Inc at <a href="mailto:woodensdinc@gmail.com">my email</a> for elegant software development solutions. 
         </p>
+        
       </footer>
-
-    </div><!--/.fluid-container-->
-
-  
+     </div>
+    <%--</div><!--/.fluid-container-->
+    </div>--%>
+    </div>
    </form>
+  
   </body>
 </html>
